force-app/main/default/objects/RET_Document_Data__c/RET_Document_Data__c.object-meta.xml
<CustomObject>
    <description>Holds metadata for Real Estate Tax case attachments.</description>
    <label>RET Document Data</label>
    <nameField>
        <label>RET Document Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RET Document Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>