force-app/main/default/objects/RET_Document_Data__c/fields/Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>