force-app/main/default/objects/RET_Document_Data__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Taxes</fullName>
            </value>
            <value>
                <fullName>Change of Ownership / Novation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>