force-app/main/default/objects/RET_Document_Data__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Tax - Bill</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Evidence of Payment/Receipt</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Other Supporting Document</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Appeal Notice</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Change in Building Assessment Notice</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Change in Tax Rate Notice</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Lessor&apos;s Request for Approval to Protest</fullName>
            </value>
            <value>
                <fullName>Real Estate Tax - Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Proof of Ownership</fullName>
            </value>
            <value>
                <fullName>Tax bill(s)</fullName>
            </value>
            <value>
                <fullName>Proof of payment</fullName>
            </value>
            <value>
                <fullName>Invoice to GSA</fullName>
            </value>
            <value>
                <fullName>Parcel information</fullName>
            </value>
            <value>
                <fullName>Tax authority valuation</fullName>
            </value>
            <value>
                <fullName>Tax appeal notification</fullName>
            </value>
            <value>
                <fullName>Tax authority appeal results</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Novation agreement - signed</fullName>
            </value>
            <value>
                <fullName>Evidence of signatory authority</fullName>
            </value>
            <value>
                <fullName>Change enactment documents</fullName>
            </value>
            <value>
                <fullName>Financial capabilities for TIs</fullName>
            </value>
            <value>
                <fullName>Evidence of active SAM registration</fullName>
            </value>
            <value>
                <fullName>Buyer/transferee state registration</fullName>
            </value>
            <value>
                <fullName>Surety consent</fullName>
            </value>
            <value>
                <fullName>Evidence of security clearance</fullName>
            </value>
            <value>
                <fullName>Foreign ownership and financing representation</fullName>
            </value>
            <value>
                <fullName>Lease compliance document</fullName>
            </value>
            <value>
                <fullName>Lab test document</fullName>
            </value>
            <value>
                <fullName>Small business subcontracting plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>