force-app/main/default/objects/RET_Document_Data__c/fields/Full_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_File_Name__c</fullName>
    <label>Full File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>