force-app/main/default/objects/RET_Document_Data__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RET Document Data</relationshipLabel>
    <relationshipName>RET_Document_Data</relationshipName>
    <type>Lookup</type>
</CustomField>