force-app/main/default/objects/RET_Document_Data__c/fields/Parent_Case_Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Last_Submission_Date__c</fullName>
    <formula>Parent_Case__r.RET_Last_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Last Submission Date</label>
    <type>DateTime</type>
</CustomField>