force-app/main/default/objects/RET_Document_Data__c/fields/Tax_Authority_for_Document__c.field-meta.xml
<CustomField>
    <fullName>Tax_Authority_for_Document__c</fullName>
    <label>Tax Authority for Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>