force-app/main/default/objects/RET_Document_Data__c/fields/Tax_Bill_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Due_Date__c</fullName>
    <label>Tax Bill Due Date</label>
    <type>Date</type>
</CustomField>