force-app/main/default/objects/RET_Document_Data__c/fields/Tax_Bill_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Frequency__c</fullName>
    <label>Tax Bill Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>