force-app/main/default/objects/RET_Document_Data__c/fields/Tax_County__c.field-meta.xml
<CustomField>
    <fullName>Tax_County__c</fullName>
    <label>Tax County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>