force-app/main/default/objects/RET_Document_Data__c/fields/Tax_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Lot_Number__c</fullName>
    <label>Tax Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>