force-app/main/default/objects/RET_Document_Data__c/fields/Tax_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Tax_Period_End__c</fullName>
    <label>Tax Period End</label>
    <type>Date</type>
</CustomField>