force-app/main/default/objects/RET_Document_Data__c/validationRules/Validate_Base_Tax_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Base_Tax_Year</fullName>
    <active>true</active>
    <description>Verifies the Base Tax Year value is a valid year.</description>
    <errorConditionFormula>NOT(
 OR(
  LEN (Tax_Year__c) = 0,
  REGEX(Tax_Year__c, &quot;[0-9]{4}&quot;)
 )
)</errorConditionFormula>
    <errorMessage>The Base Tax Year must be a valid 4 digit year.</errorMessage>
</ValidationRule>