force-app/main/default/objects/RET_Document_Data__c/validationRules/Validate_Tax_Period_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Tax_Period_End_Date</fullName>
    <active>true</active>
    <description>The tax period end date should be after the tax period start date</description>
    <errorConditionFormula>Tax_Period_End__c  &lt;  Tax_Period_Start__c</errorConditionFormula>
    <errorMessage>Tax Period End Date should be after the Tax Period Start Date.</errorMessage>
</ValidationRule>